// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/breweries/index.vue template renderd correctly with data will be renderd correctly 1`] = `
"<div search=\\"[object Object]\\">
  <div class=\\"d-flex justify-content-between align-items-center\\">
    <h1>酒蔵一覧</h1>
    <b-button-stub variant=\\"success\\" to=\\"/breweries/add\\">追加</b-button-stub>
  </div>
  <hr>
  <div class=\\"row\\">
    <div class=\\"col-md-4\\">
      <div class=\\"input-group mb-3\\">
        <div class=\\"input-group-prepend\\"><span class=\\"input-group-text\\">都道府県</span></div> <select class=\\"custom-select\\">
          <option value=\\"0\\">

          </option>
          <option value=\\"1\\">
            北海道
          </option>
          <option value=\\"2\\">
            青森県
          </option>
          <option value=\\"3\\">
            岩手県
          </option>
          <option value=\\"4\\">
            宮城県
          </option>
          <option value=\\"5\\">
            秋田県
          </option>
          <option value=\\"6\\">
            山形県
          </option>
          <option value=\\"7\\">
            福島県
          </option>
          <option value=\\"8\\">
            茨城県
          </option>
          <option value=\\"9\\">
            栃木県
          </option>
          <option value=\\"10\\">
            群馬県
          </option>
          <option value=\\"11\\">
            埼玉県
          </option>
          <option value=\\"12\\">
            千葉県
          </option>
          <option value=\\"13\\">
            東京都
          </option>
          <option value=\\"14\\">
            神奈川県
          </option>
          <option value=\\"15\\">
            新潟県
          </option>
          <option value=\\"16\\">
            富山県
          </option>
          <option value=\\"17\\">
            石川県
          </option>
          <option value=\\"18\\">
            福井県
          </option>
          <option value=\\"19\\">
            山梨県
          </option>
          <option value=\\"20\\">
            長野県
          </option>
          <option value=\\"21\\">
            岐阜県
          </option>
          <option value=\\"22\\">
            静岡県
          </option>
          <option value=\\"23\\">
            愛知県
          </option>
          <option value=\\"24\\">
            三重県
          </option>
          <option value=\\"25\\">
            滋賀県
          </option>
          <option value=\\"26\\">
            京都府
          </option>
          <option value=\\"27\\">
            大阪府
          </option>
          <option value=\\"28\\">
            兵庫県
          </option>
          <option value=\\"29\\">
            奈良県
          </option>
          <option value=\\"30\\">
            和歌山県
          </option>
          <option value=\\"31\\">
            鳥取県
          </option>
          <option value=\\"32\\">
            島根県
          </option>
          <option value=\\"33\\">
            岡山県
          </option>
          <option value=\\"34\\">
            広島県
          </option>
          <option value=\\"35\\">
            山口県
          </option>
          <option value=\\"36\\">
            徳島県
          </option>
          <option value=\\"37\\">
            香川県
          </option>
          <option value=\\"38\\">
            愛媛県
          </option>
          <option value=\\"39\\">
            高知県
          </option>
          <option value=\\"40\\">
            福岡県
          </option>
          <option value=\\"41\\">
            佐賀県
          </option>
          <option value=\\"42\\">
            長崎県
          </option>
          <option value=\\"43\\">
            熊本県
          </option>
          <option value=\\"44\\">
            大分県
          </option>
          <option value=\\"45\\">
            宮崎県
          </option>
          <option value=\\"46\\">
            鹿児島県
          </option>
          <option value=\\"47\\">
            沖縄県
          </option>
        </select>
      </div>
    </div>
    <div class=\\"col-md-8\\">
      <div class=\\"input-group mb-3\\"><input type=\\"text\\" class=\\"form-control\\">
        <div class=\\"input-group-append\\">
          <b-button-stub variant=\\"secondary\\" type=\\"button\\">検索</b-button-stub>
        </div>
      </div>
    </div>
  </div>
  <b-pagination-stub total-rows=\\"0\\" per-page=\\"10\\" prev-text=\\"Prev\\" next-text=\\"Next\\" align=\\"center\\" value=\\"1\\"></b-pagination-stub>
  <hr>
  <div class=\\"list-group\\"><a class=\\"list-group-item list-group-item-action\\"><span>test</span> <span></span></a><a class=\\"list-group-item list-group-item-action\\"><span>test2</span> <span></span></a><a class=\\"list-group-item list-group-item-action\\"><span>test3</span> <span></span></a></div>
</div>"
`;

exports[`pages/breweries/index.vue template renderd correctly without data will be renderd correctly 1`] = `
"<div search=\\"[object Object]\\">
  <div class=\\"d-flex justify-content-between align-items-center\\">
    <h1>酒蔵一覧</h1>
    <b-button-stub variant=\\"success\\" to=\\"/breweries/add\\">追加</b-button-stub>
  </div>
  <hr>
  <div class=\\"row\\">
    <div class=\\"col-md-4\\">
      <div class=\\"input-group mb-3\\">
        <div class=\\"input-group-prepend\\"><span class=\\"input-group-text\\">都道府県</span></div> <select class=\\"custom-select\\">
          <option value=\\"0\\">

          </option>
          <option value=\\"1\\">
            北海道
          </option>
          <option value=\\"2\\">
            青森県
          </option>
          <option value=\\"3\\">
            岩手県
          </option>
          <option value=\\"4\\">
            宮城県
          </option>
          <option value=\\"5\\">
            秋田県
          </option>
          <option value=\\"6\\">
            山形県
          </option>
          <option value=\\"7\\">
            福島県
          </option>
          <option value=\\"8\\">
            茨城県
          </option>
          <option value=\\"9\\">
            栃木県
          </option>
          <option value=\\"10\\">
            群馬県
          </option>
          <option value=\\"11\\">
            埼玉県
          </option>
          <option value=\\"12\\">
            千葉県
          </option>
          <option value=\\"13\\">
            東京都
          </option>
          <option value=\\"14\\">
            神奈川県
          </option>
          <option value=\\"15\\">
            新潟県
          </option>
          <option value=\\"16\\">
            富山県
          </option>
          <option value=\\"17\\">
            石川県
          </option>
          <option value=\\"18\\">
            福井県
          </option>
          <option value=\\"19\\">
            山梨県
          </option>
          <option value=\\"20\\">
            長野県
          </option>
          <option value=\\"21\\">
            岐阜県
          </option>
          <option value=\\"22\\">
            静岡県
          </option>
          <option value=\\"23\\">
            愛知県
          </option>
          <option value=\\"24\\">
            三重県
          </option>
          <option value=\\"25\\">
            滋賀県
          </option>
          <option value=\\"26\\">
            京都府
          </option>
          <option value=\\"27\\">
            大阪府
          </option>
          <option value=\\"28\\">
            兵庫県
          </option>
          <option value=\\"29\\">
            奈良県
          </option>
          <option value=\\"30\\">
            和歌山県
          </option>
          <option value=\\"31\\">
            鳥取県
          </option>
          <option value=\\"32\\">
            島根県
          </option>
          <option value=\\"33\\">
            岡山県
          </option>
          <option value=\\"34\\">
            広島県
          </option>
          <option value=\\"35\\">
            山口県
          </option>
          <option value=\\"36\\">
            徳島県
          </option>
          <option value=\\"37\\">
            香川県
          </option>
          <option value=\\"38\\">
            愛媛県
          </option>
          <option value=\\"39\\">
            高知県
          </option>
          <option value=\\"40\\">
            福岡県
          </option>
          <option value=\\"41\\">
            佐賀県
          </option>
          <option value=\\"42\\">
            長崎県
          </option>
          <option value=\\"43\\">
            熊本県
          </option>
          <option value=\\"44\\">
            大分県
          </option>
          <option value=\\"45\\">
            宮崎県
          </option>
          <option value=\\"46\\">
            鹿児島県
          </option>
          <option value=\\"47\\">
            沖縄県
          </option>
        </select>
      </div>
    </div>
    <div class=\\"col-md-8\\">
      <div class=\\"input-group mb-3\\"><input type=\\"text\\" class=\\"form-control\\">
        <div class=\\"input-group-append\\">
          <b-button-stub variant=\\"secondary\\" type=\\"button\\">検索</b-button-stub>
        </div>
      </div>
    </div>
  </div>
  <b-pagination-stub total-rows=\\"0\\" per-page=\\"10\\" prev-text=\\"Prev\\" next-text=\\"Next\\" align=\\"center\\" value=\\"1\\"></b-pagination-stub>
  <hr>
  <div class=\\"alert alert-warning\\">データがありません</div>
</div>"
`;
